[package]
name = "tetris1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.24.0"
rand = "0.8.4"
eframe = "0.24.1"
env_logger = "0.10.1" 
egui_extras = {version = "0.24.2", features = ["image"]}


